// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainSidebarDrawerButton should match, full snapshot 1`] = `
<TouchableOpacity
  accessibilityHint="Opens the channels and teams drawer"
  accessibilityLabel="Channels and teams"
  accessibilityRole="button"
  accessible={true}
  onPress={[Function]}
  style={
    Object {
      "width": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 10,
        },
      ]
    }
    testID="main_sidebar_drawer.button"
  >
    <View>
      <View
        style={
          Object {
            "height": 25,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`MainSidebarDrawerButton should match, full snapshot 2`] = `
<TouchableOpacity
  accessibilityHint="Opens the channels and teams drawer"
  accessibilityLabel="Channels and teams"
  accessibilityRole="button"
  accessible={true}
  onPress={[Function]}
  style={
    Object {
      "width": 55,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 10,
        },
      ]
    }
    testID="main_sidebar_drawer.button"
  >
    <View>
      <CompassIcon
        color="#ffffff"
        name="menu-variant"
        size={24}
      />
      <Badge
        containerStyle={
          Object {
            "borderColor": "#192a4d",
            "borderRadius": 14,
            "borderWidth": 2,
            "position": "absolute",
            "right": -9,
            "top": -6,
          }
        }
        count={1}
        countStyle={
          Object {
            "color": "#1e325c",
            "fontSize": 10,
            "fontWeight": "bold",
          }
        }
        extraPaddingHorizontal={10}
        minHeight={20}
        minWidth={18}
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "height": 18,
            "padding": 3,
          }
        }
        testID="main_sidebar_drawer.button.badge"
      />
    </View>
  </View>
</TouchableOpacity>
`;
